--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,10 @@
-# .github/workflows/dotnet.yml
-
-name: .NET CI
+name: .NET
 
 on:
   push:
+    branches: [ "dev" ]
   pull_request:
+    branches: [ "dev" ]
 
 jobs:
   build:
@@ -12,40 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-
-    - name: Cache NuGet packages
-      uses: actions/cache@v4
-      with:
-        path: ~/.nuget/packages
-        key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
-        restore-keys: |
-          ${{ runner.os }}-nuget-
-
-    - name: Clean build artifacts
-      run: dotnet clean
-      working-directory: src
-
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: src
-
     - name: Build
       run: dotnet build --no-restore
-      working-directory: src
-
-    - name: Test with results
-      run: dotnet test --no-build --verbosity normal --logger trx
-      working-directory: src
-
-    - name: Publish test results
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results
-        path: '**/TestResults/*.trx'
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
